# data-competition-template

./: Makefile  README.md  pyproject.toml
